--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,24 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            
+            <dependency>
+                <groupId>org.kiwiproject</groupId>
+                <artifactId>kiwi</artifactId>
+                <version>${kiwi.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.kiwiproject</groupId>
+                <artifactId>kiwi-test</artifactId>
+                <version>${kiwi-test.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.kiwiproject</groupId>
+                <artifactId>retrying-again</artifactId>
+                <version>${retrying-again.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.testcontainers</groupId>
@@ -69,13 +87,11 @@
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>kiwi</artifactId>
-            <version>${kiwi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>retrying-again</artifactId>
-            <version>${retrying-again.version}</version>
         </dependency>
         
         <dependency>
@@ -108,7 +124,6 @@
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>kiwi-test</artifactId>
-            <version>${kiwi-test.version}</version>
             <scope>test</scope>
         </dependency>
         
