--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
         <!-- Required dependencies -->
 
         <dependency>
+            <groupId>org.jspecify</groupId>
+            <artifactId>jspecify</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>kiwi</artifactId>
         </dependency>
