--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>service-discovery-client</artifactId>
-    <version>2.1.8</version>
+    <version>2.1.9-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -22,7 +22,7 @@
         <connection>scm:git:https://github.com/kiwiproject/service-discovery-client.git</connection>
         <developerConnection>scm:git:git@github.com:kiwiproject/service-discovery-client.git</developerConnection>
         <url>https://github.com/kiwiproject/service-discovery-client</url>
-        <tag>v2.1.8</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
