--- a/pom.xml
+++ b/pom.xml
@@ -147,13 +147,13 @@
 
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>testcontainers-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>consul</artifactId>
+            <artifactId>testcontainers-consul</artifactId>
             <scope>test</scope>
         </dependency>
 
